tests/NormalTests/paczka1/small_fuzzy/75694049.err
Error in line 1: ybm9Jc5pZi A152 39,7
Error in line 8: CrLvMc S520 16,5
Error in line 4: ybm9Jc5jpZi A152 178,6
